# nv-resource-controller

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE.md  README.md
include/: cuda_entry.h  extern.h  hook.h  list.h
src/: cuda_hook.c  dlfcn.c  entry.c  env.c  ioctl_hook.c  server_monitor.c  util.c
